--- a/fe-jeopardy/src/app/lobby/lobby.component.html
+++ b/fe-jeopardy/src/app/lobby/lobby.component.html
@@ -4,4 +4,4 @@
 <ol>
     <li *ngFor="let player of players">{{ player.name }}</li>
 </ol>
-<p> You are playing as {{ playerName() }} </p>
+<p> You are playing as {{ playerName }} </p>
