allow passing question

--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -31,7 +31,8 @@
         <br>
         Value: {{ gameState.curValue() }}
         <br>
-        <button *ngIf="player.canBuzz()" (click)="handleBuzz()">Buzz</button>
+        <button *ngIf="player.canBuzz()" (click)="handleBuzz(false)">Buzz</button>
+        <button *ngIf="player.canBuzz()" (click)="handleBuzz(true)">Pass</button>
     </div>
     
     <div *ngIf="gameState.recvingAns() && player.canAnswer()">
