--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -72,5 +72,5 @@
 </div>
 
 <div *ngIf="gameState.gameOver()">
-    The winner is {{ gameState.getWinner() }}
+    {{ gameState.endGameMessage() }}
 </div>
