--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -23,6 +23,8 @@
             </td>
         </tr>
     </table>
+
+    <p  *ngIf="player.canPick()">seconds to pick: {{ countdownSeconds }}</p>
 </div>
 
 <div *ngIf="!gameState.finalRound()">
@@ -33,11 +35,15 @@
         <br>
         <button *ngIf="player.canBuzz()" (click)="handleBuzz(false)">Buzz</button>
         <button *ngIf="player.canBuzz()" (click)="handleBuzz(true)">Pass</button>
+
+        <p *ngIf="player.canBuzz()">seconds to buzz: {{ countdownSeconds }}</p>
     </div>
     
     <div *ngIf="gameState.recvingAns() && player.canAnswer()">
         <input type="text" [(ngModel)]="questionAnswer" placeholder="Enter your answer">
         <button (click)="handleAnswer()">Answer</button>
+
+        <p *ngIf="player.canAnswer()">seconds to answer: {{ countdownSeconds }}</p>
     </div>
     
     <div *ngIf="gameState.recvingAns() && !player.canAnswer()">
@@ -50,6 +56,8 @@
         <b>{{ gameState.getAnsCorrectness() ? "correctly" : "incorrectly" }}</b> with <b>{{ gameState.getLastAnswer() }}</b>. <br>
         <button (click)="handleAnsConfirmation(true)">Accept</button>
         <button (click)="handleAnsConfirmation(false)">Challenge</button>
+
+        <p *ngIf="player.canConfirmAns()">seconds to confirm: {{ countdownSeconds }}</p>
     </div>
 
     <div *ngIf="gameState.recvingAnsConfirmation() && !player.canConfirmAns()">
@@ -59,6 +67,7 @@
     <div *ngIf="gameState.recvingWager() && player.canWager()">
         <input type="number" [(ngModel)]="wagerAmt" placeholder="Enter your wager">
         <button (click)="handleWager()">Wager</button>
+        <p *ngIf="player.canWager()">seconds to wager: {{ countdownSeconds }}</p>
     </div>
     
     <div *ngIf="gameState.recvingWager() && !player.canWager()">
@@ -71,6 +80,7 @@
     <div *ngIf="player.canWager()">
         <input type="number" [(ngModel)]="wagerAmt" placeholder="Enter your wager">
         <button (click)="handleWager()">Wager</button>
+        <p *ngIf="player.canWager()">seconds to final wager: {{ countdownSeconds }}</p>
     </div>
 </div>
 
@@ -80,6 +90,7 @@
     <div *ngIf="player.canAnswer()">
         <input type="text" [(ngModel)]="questionAnswer" placeholder="Enter your answer">
         <button (click)="handleAnswer()">Answer</button>
+        <p *ngIf="player.canAnswer()">seconds to final answer: {{ countdownSeconds }}</p>
     </div>
 </div>
 
