--- a/fe-jeopardy/src/app/lobby/lobby.component.html
+++ b/fe-jeopardy/src/app/lobby/lobby.component.html
@@ -5,3 +5,5 @@
     <li *ngFor="let player of players">{{ player.name }}</li>
 </ol>
 <p> You are playing as {{ playerName }} </p>
+
+<p>Code to join: {{ gameName }} </p>
