--- a/fe-jeopardy/src/app/join/join.component.html
+++ b/fe-jeopardy/src/app/join/join.component.html
@@ -3,9 +3,9 @@
     <span>{{ title }} app is running!</span>
 </div>
 
-<div>
+<div class="container">
     <input type="text" [(ngModel)]="playerName" placeholder="Enter your name">
-    <button (click)="joinGame()">Join public game</button>
+    <button (click)="joinGame(false)">Join public game</button>
     <input type="text" [(ngModel)]="gameName" placeholder="Game code">
-    <button (click)="joinGame()">Join private game</button>
+    <button (click)="joinGame(true)">Join private game</button>
 </div>
