--- a/fe-jeopardy/src/app/join/join.component.html
+++ b/fe-jeopardy/src/app/join/join.component.html
@@ -9,3 +9,5 @@
     <input type="text" [(ngModel)]="gameName" placeholder="Game code">
     <button (click)="joinGame(true)">Join private game</button>
 </div>
+
+<button (click)="rejoin()">Disconnected? Click to rejoin</button>
