clean up components

--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -4,7 +4,7 @@
 
 <p> You are playing as {{ player.Name() }}</p>
 
-<app-pre-game *ngIf="game.PreGame()" [lobbyMessage]="lobbyMessage" [gameName]="game.Name()"></app-pre-game>
+<app-pre-game *ngIf="game.PreGame()" [preGameMessage]="preGameMessage" [gameName]="game.Name()"></app-pre-game>
 
 <app-recv-pick *ngIf="game.RecvPick()" [topics]="topics" [questionRows]="questionRows" [countdownSeconds]="countdownSeconds"></app-recv-pick>
 
