--- a/fe-jeopardy/src/app/game/pre-game/pre-game.component.html
+++ b/fe-jeopardy/src/app/game/pre-game/pre-game.component.html
@@ -1,7 +1,4 @@
 <div>
-    <p>
-        {{lobbyMessage}}
-    </p>
-    
+    <p>{{preGameMessage}}</p>
     <p>Code to join: {{ gameName }} </p>
 </div>
