--- a/fe-jeopardy/src/app/game/recv-vote/recv-vote.component.html
+++ b/fe-jeopardy/src/app/game/recv-vote/recv-vote.component.html
@@ -4,8 +4,7 @@
     <b>{{ game.AnsCorrectness() ? "correctly" : "incorrectly" }}</b> with <b>{{ game.LastAnswer() }}</b>. <br>
     <button (click)="handleVote(true)">Accept</button>
     <button (click)="handleVote(false)">Challenge</button>
-
-    <p *ngIf="player.CanVote()">seconds to vote: {{ countdownSeconds }}</p>
+    <p>seconds to vote: {{ countdownSeconds }}</p>
 </div>
 
 <div *ngIf="!player.CanVote()">
