--- a/fe-jeopardy/src/app/game/recv-ans/recv-ans.component.html
+++ b/fe-jeopardy/src/app/game/recv-ans/recv-ans.component.html
@@ -9,8 +9,7 @@
     <div *ngIf="player.CanAnswer()">
         <input type="text" [(ngModel)]="questionAnswer" placeholder="Enter your answer">
         <button (click)="handleAnswer()">Answer</button>
-
-        <p *ngIf="player.CanAnswer()">seconds to answer: {{ countdownSeconds }}</p>
+        <p>seconds to answer: {{ countdownSeconds }}</p>
     </div>
     
     <div *ngIf="!player.CanAnswer()">
@@ -24,6 +23,6 @@
     <div *ngIf="player.CanAnswer()">
         <input type="text" [(ngModel)]="questionAnswer" placeholder="Enter your answer">
         <button (click)="handleAnswer()">Answer</button>
-        <p *ngIf="player.CanAnswer()">seconds to final answer: {{ countdownSeconds }}</p>
+        <p>seconds to final answer: {{ countdownSeconds }}</p>
     </div>
 </div>
