--- a/fe-jeopardy/src/app/game/pre-game/pre-game.component.html
+++ b/fe-jeopardy/src/app/game/pre-game/pre-game.component.html
@@ -1,4 +1,4 @@
 <div>
-    <p>{{preGameMessage}}</p>
-    <p>Code to join: {{ gameName }} </p>
+    <p>{{gameMessage}}</p>
+    <p>Code to join: {{gameName}} </p>
 </div>
